fix contrast image display on mobile

--- a/app/styles/_section_kit-conseil.scss
+++ b/app/styles/_section_kit-conseil.scss
@@ -3,7 +3,15 @@
   padding: 80px 0;
   background: white;
   .thumb {
-	width: 49%;
+	width: 100%;
 	display: inline-block;
+	  @include at-breakpoint ('medium') {
+		width: 49%;
+      }
+      @include at-breakpoint ('small') {
+	     width: 49%;
+      }
   }
+
+
 }
